--- a/src/pages/posts/post.module.scss
+++ b/src/pages/posts/post.module.scss
@@ -38,16 +38,15 @@
           }
         }
       
-        /*&.previewContent {
+        &.previewContent {
           background: linear-gradient(var(--gray-100), transparent);
           background-clip: text;
           -webkit-text-fill-color: transparent;
-        }*/
+        }
       }
-
   }
   
-  /*
+
   .continueReading {
     padding: 2rem;
     text-align: center;
@@ -65,6 +64,5 @@
         text-decoration: underline;
       }
     }
-  
   }
-  */
+  
